--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,115 +1,14 @@
-<!DOCTYPE html>
-<html lang="zxx">
-    <head>
-        <!--====== Required meta tags ======-->
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="description" content="Digital Agency, Creative Agency, Marketing Agency">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!--====== Title ======-->
-        <title>Agenko - Creative Digital Agency HTML Template</title>
-        <!--====== Favicon Icon ======-->
-        <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
-        <!--====== Google Fonts ======-->
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-        <!--====== Flaticon css ======-->
-        <link rel="stylesheet" href="assets/fonts/flaticon/flaticon_agenko.css">
-        <!--====== FontAwesome css ======-->
-        <link rel="stylesheet" href="assets/fonts/fontawesome/css/all.min.css">
-        <!--====== Bootstrap css ======-->
-        <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css">
-        <!--====== Slick-popup css ======-->
-        <link rel="stylesheet" href="assets/css/plugins/slick.css">
-        <!--====== Magnific-popup css ======-->
-        <link rel="stylesheet" href="assets/css/plugins/magnific-popup.css">
-        <!--====== Default css ======-->
-        <link rel="stylesheet" href="assets/css/default.css">
-        <!--====== Style css ======-->
-        <link rel="stylesheet" href="assets/css/style.css">
-    </head>
-    <body>
-        <!--====== Preloader ======-->
-        <div class="preloader">
-            <div class="loading-container">
-                <div class="loading"></div>
-                <div id="loading-icon"><img src="assets/images/loader.png" alt=""></div>
-            </div>
-        </div>
-        <!--====== Start Overlay ======-->
-        <div class="offcanvas__overlay"></div>
-        <!--=== Start  Header Area  ===-->
-        <header class="header-area header-one  transparent-header">
-            <!--====  Header Navigation  ===-->
-            <div class="header-navigation">
-                <!--====  Header Nav Inner  ===-->
-                <div class="container">
-                    <!--====  Primary Menu  ===-->
-                    <div class="primary-menu">
-                        <!--====  Site Branding  ===-->
-                        <div class="site-branding">
-                            <a href="index.html" class="brand-logo"><img src="assets/images/marketing-agency/logo/logo-main.png" alt="Brand Logo"></a>
-                        </div>
-                        <!--=== Sasly Main Menu===-->
-                        <div class="pf-nav-menu">
-                            <!--====  Site Branding  ===-->
-                            <div class="site-branding d-block d-lg-none text-center">
-                                <a href="index.html" class="brand-logo"><img src="assets/images/creative-agency/logo/logo-main.png" alt="Brand Logo"></a>
-                            </div>
-                            <!--=== Main Menu ===-->
-                            <nav class="main-menu">
-                                <ul>
-                                    <li class="menu-item has-children"><a href="index-2.html">Home</a></li>
-                
-                                    <li class="menu-item has-children"><a href="services.html">Our service</a></li>
 
-                                      <li class="menu-item has-children"><a href="team.html">Our Team</a></li>
+               {% extends "base.html" %}
 
-                                    <li class="menu-item has-children"><a href="project-details.html">Project Details</a></li>
-                             
-                                    <li class="menu-item"><a href="contact.html">Contact</a></li>
-                                </ul>
-                            </nav>
-                            <!--=== PF Nav Button ===-->
-                            <div class="pf-nav-button mt-20 d-block d-md-none">
-                                <a href="contact.html" class="theme-btn style-one">
-                                    <span class="text-flip">
-                                        <span class="text">LETS TALK</span>
-                                        <span class="text">LETS TALK</span>
-                                    </span>
-                                </a>
-                            </div>
-                            <!--=== PF Menu Bottom ===-->
-                            <div class="pf-menu-bottom mt-50 d-block d-lg-none">
-                                <h5>Follow Us</h5>
-                                <ul class="social-link">
-                                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <!--=== Header Nav Right ===-->
-                        <div class="nav-right-item">
-                            <div class="nav-button d-none d-md-block">
-                                <a href="contact.html" class="theme-btn style-one">
-                                    <span class="text-flip">
-                                        <span class="text">LETS TALK</span>
-                                        <span class="text">LETS TALK</span>
-                                    </span>
-                                </a>
-                            </div>
-                            <div class="navbar-toggler">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>    
-        </header><!--=== End  Header Area  ===-->
-     
+{% block title %}Contact{% endblock %}
+
+{% block head %}
+  
+{% endblock %}
+
+                {% block body %}
+
                     <!--====== Start Contact Section  ======-->
                     <section class="agenko-contact pt-130 pb-80">
                         <div class="container">
@@ -117,7 +16,7 @@
                                 <div class="col-lg-5">
                                     <!--=== Contact Info Wrapper ===-->
                                     <div class="contact-info-wrapper mb-50 pf_fadeup">
-                                        <div class="shape"><span><img src="assets/images/pages/shape/world.png" alt="map"></span></div>
+                                        <div class="shape"><span><img src="{{url_for('static',filename='assets/images/pages/shape/world.png')}}" alt="map"></span></div>
                                         <ul>
                                             <li>
                                                 <div class="phone"><a href="tel:+1(555)123-4567">+1 (555) 123-4567</a></div>
@@ -210,154 +109,10 @@
                             <iframe src="https://maps.google.com/maps?q=new%20york&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed"></iframe>
                         </div>
                     </section>
-                </main>
-                <!--====== Start Footer Area ======-->
-                <footer class="agenko-footer gray-dark pt-130 primary-black-bg">
-                    <div class="shape shape-one"><span><img class="rotate360" src="assets/images/marketing-agency/footer/element1.png" alt="Shape"></span></div>
-                    <div class="shape shape-two"><span><img class="rotate360" src="assets/images/marketing-agency/footer/element2.png" alt="Shape"></span></div>
-                    <div class="shape shape-blur_one"><span></span></div>
-                    <div class="shape shape-blur_two"><span></span></div>
-                    <!--=== Footer Widget Area ===-->
-                    <div class="footer-widget-area pb-80">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-4 col-md-6 col-sm-6">
-                                    <!--=== Footer Widget ===-->
-                                    <div class="footer-widget footer-about-widget mb-40 pf_fadeup">
-                                        <div class="footer-content">
-                                            <div class="footer-logo">
-                                                <a href="index.html"><img src="assets/images/marketing-agency/logo/logo-main.png" alt="Brand Logo"></a>
-                                            </div>
-                                            <p>Agenko creative digital agency delivering innovate web Development marketing.</p>
-                                            <form>
-                                                <div class="form-group">
-                                                    <input type="email" class="form_control" placeholder="Email Address" name="email" required>
-                                                    <label><i class="far fa-envelope"></i></label>
-                                                    <button class="theme-btn style-two">Subscribe</button>
-                                                </div>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-3 col-md-6 ">
-                                    <!--=== Footer Widget ===-->
-                                    <div class="footer-widget footer-contact-info-widget mb-40 pf_fadeup">
-                                        <div class="footer-content mb-25">
-                                            <h4 class="widget-title">Main Address</h4>
-                                            <p>6801 Hollywood Blvd, Los Angeles, CA 90028</p>
-                                        </div>
-                                        <div class="footer-content mb-25">
-                                            <h4 class="widget-title">Sub-Address</h4>
-                                            <p>200 Santa Monica Pier, Santa Monica, CA 90401</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-5 col-md-12">
-                                    <div class="row">
-                                        <div class="col-md-5">
-                                            <!--=== Footer Widget ===-->
-                                            <div class="footer-widget footer-nav-widget mb-40 pf_fadeup">
-                                                <div class="footer-content mb-35">
-                                                    <h4 class="widget-title">Our Link</h4>
-                                                    <ul class="footer-nav">
-                                                        <li>
-                                                            <a href="about.html">About us</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="services.html">Services</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="projects.html">Our Project</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="faqs.html">FAQ</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="contact.html">Contact us</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-7">
-                                            <!--=== Footer Widget ===-->
-                                            <div class="footer-widget footer-contact-widget mb-40 pf_fadeup">
-                                                <div class="footer-content">
-                                                    <h4 class="widget-title">Contact</h4>
-                                                    <div class="agenko-iconic-box style-three mb-30">
-                                                        <div class="icon">
-                                                            <i class="far fa-envelope"></i>
-                                                        </div>
-                                                        <div class="content">
-                                                            <h6>Email</h6>
-                                                            <p><a href="mailto:info@agenko.com">info@agenko.com</a></p>
-                                                        </div>
-                                                    </div>
-                                                    <div class="agenko-iconic-box style-three">
-                                                        <div class="icon">
-                                                            <i class="far fa-phone-alt"></i>
-                                                        </div>
-                                                        <div class="content">
-                                                            <h6>Phone</h6>
-                                                            <p><a href="tel:+555-7659-9854">+555-7659-9854</a></p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--=== Footer Copyright ===-->
-                    <div class="footer-copyright">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <!--=== Copyright Text ===-->
-                                    <div class="copyright-text">
-                                        <p>&copy; 2025 <span>Agenko</span> - All Rights Reserved.</p>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <!--=== Copyright Nav ===-->
-                                    <div class="copyright-nav">
-                                        <ul>
-                                            <li><a href="#">Terms & Condition</a></li>
-                                            <li><a href="#">Privacy Policy</a></li>
-                                            <li><a href="#">Contact</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </footer><!--====== End Footer  ======-->
-            </div>
-        </div>
-        <!--====== Jquery js ======-->
-        <script src="assets/js/plugins/jquery-3.7.1.min.js"></script>
-        <!--====== Bootstrap js ======-->
-        <script src="assets/js/plugins/popper.min.js"></script>
-        <!--====== Bootstrap js ======-->
-        <script src="assets/js/plugins/bootstrap.min.js"></script>
-        <!--====== Gsap Js ======-->
-        <script src="assets/js/plugins/gsap/gsap.min.js"></script>
-        <script src="assets/js/plugins/gsap/SplitText.min.js"></script>
-        <script src="assets/js/plugins/gsap/ScrollSmoother.min.js"></script>
-        <script src="assets/js/plugins/gsap/ScrollTrigger.min.js"></script>
-        <!--====== Slick js ======-->
-        <script src="assets/js/plugins/slick.min.js"></script>
-        <!--====== Magnific js ======-->
-        <script src="assets/js/plugins/jquery.magnific-popup.min.js"></script>
-        <!--====== Waypoint js ======-->
-        <script src="assets/js/plugins/jquery.waypoints.js"></script>
-        <!--====== CounterUp js ======-->
-        <script src="assets/js/plugins/jquery.counterup.min.js"></script>
-        <!--====== Ajax Contact js ======-->
-        <script src="assets/js/ajax-contact.js"></script>
-        <!--====== Main js ======-->
-        <script src="assets/js/theme.js"></script>
-    </body>
-</html>
+  
+
+                    {% block scripts %}
+                    {% endblock %}
+    
+                 
+            {% endblock %}
