--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                                         <ul class="service-list pf_fadeup">
                                             <li>
                                                 <!--=== Iconic Box ===-->
-                                                <a href="service-details.html" class="agenko-iconic-box style-one">
+                                                <a href="{{ url_for('contact') }}" class="agenko-iconic-box style-one">
                                                     <div class="icon">
                                                         <i class="flaticon-cloud-computing"> </i>
                                                     </div>
@@ -57,7 +57,7 @@
                                             </li>
                                             <li>
                                                 <!--=== Iconic Box ===-->
-                                                <a href="service-details.html" class="agenko-iconic-box style-one">
+                                                <a href="{{ url_for('services') }}" class="agenko-iconic-box style-one">
                                                     <div class="icon">
                                                         <i class="flaticon-web-development"><img src="{{url_for('static',filename='assets/images/logo_index_circle/download.jpg')}}" alt=""></i>
                                                     </div>
@@ -68,7 +68,7 @@
                                             </li>
                                             <li>
                                                 <!--=== Iconic Box ===-->
-                                                <a href="service-details.html" class="agenko-iconic-box style-one">
+                                                <a href="{{ url_for('services') }}" class="agenko-iconic-box style-one">
                                                     <div class="icon">
                                                         <i class="flaticon-idea"></i>
                                                     </div>
@@ -79,7 +79,7 @@
                                             </li>
                                             <li>
                                                 <!--=== Iconic Box ===-->
-                                                <a href="service-details.html" class="agenko-iconic-box style-one">
+                                                <a href="{{ url_for('services') }}" class="agenko-iconic-box style-one">
                                                     <div class="icon">
                                                         <i class="flaticon-announcement"></i>
                                                     </div>
@@ -130,7 +130,7 @@
                                             <p>Business and corporate <span>web dashboard</span> focuses on creating intuitive, data-driven interfaces that enhance decision-making, streamline processes.</p>
                                         </div>
                                         <div class="card-button">
-                                            <a href="service-details.html" class="theme-btn style-one">
+                                            <a href="{{ url_for('services') }}" class="theme-btn style-one">
                                                 <span class="text-flip">
                                                     <span class="text">LEARN MORE</span>
                                                     <span class="text">LEARN MORE</span>
@@ -150,7 +150,7 @@
                                             <p>Comprehensive <span>e-commerce solutions</span> designed to optimize user experience, boost conversions, and streamline online transactions. Our tailored.</p>
                                         </div>
                                         <div class="card-button">
-                                            <a href="service-details.html" class="theme-btn style-one">
+                                            <a href="{{ url_for('services') }}" class="theme-btn style-one">
                                                 <span class="text-flip">
                                                     <span class="text">LEARN MORE</span>
                                                     <span class="text">LEARN MORE</span>
@@ -170,7 +170,7 @@
                                             <p>Crafting <span>unique branding</span> and identity designs that reflect your brand’s values, build recognition, and create a lasting impression on audiences</p>
                                         </div>
                                         <div class="card-button">
-                                            <a href="service-details.html" class="theme-btn style-one">
+                                            <a href="{{ url_for('services') }}" class="theme-btn style-one">
                                                 <span class="text-flip">
                                                     <span class="text">LEARN MORE</span>
                                                     <span class="text">LEARN MORE</span>
@@ -196,7 +196,7 @@
                                 </div>
                                 <div class="col-lg-5">
                                     <div class="agk-button mb-60 float-lg-end pf_fadeup">
-                                        <a href="projects.html" class="theme-btn style-one">
+                                        <a href="{{ url_for('project') }}" class="theme-btn style-one">
                                             <span class="text-flip">
                                                 <span class="text">View All Work</span>
                                                 <span class="text">View All Work</span>
@@ -212,7 +212,7 @@
                                         <div class="thumbnail">
                                             <img src="{{url_for('static',filename='assets/images/digital-agency/project/project1.jpg')}}" alt="Project Image">
                                             <div class="project-button">
-                                                <a href="project-details.html"><i class="far fa-plus"></i></a>
+                                                <a href="{{ url_for('project') }}"><i class="far fa-plus"></i></a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -220,7 +220,7 @@
                                                 <a href="#">Mobile App</a>
                                                 <a href="#">UI/UX Design</a>
                                             </div>
-                                            <h4 class="title"><a href="project-details.html">Medical Mobile Design & Development</a></h4>
+                                            <h4 class="title"><a href="{{ url_for('project') }}">Medical Mobile Design & Development</a></h4>
                                         </div>
                                     </div>
                                 </div>
@@ -230,7 +230,7 @@
                                         <div class="thumbnail">
                                             <img src="{{url_for('static',filename='assets/images/digital-agency/project/project2.jpg')}}" alt="Project Image">
                                             <div class="project-button">
-                                                <a href="project-details.html"><i class="far fa-plus"></i></a>
+                                                <a href="{{ url_for('project') }}"><i class="far fa-plus"></i></a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -238,7 +238,7 @@
                                                 <a href="#">Mobile App</a>
                                                 <a href="#">UI/UX Design</a>
                                             </div>
-                                            <h4 class="title"><a href="project-details.html">Stacks Website Design & Coding</a></h4>
+                                            <h4 class="title"><a href="{{ url_for('project') }}">Stacks Website Design & Coding</a></h4>
                                         </div>
                                     </div>
                                 </div>
@@ -248,7 +248,7 @@
                                         <div class="thumbnail">
                                             <img src="{{url_for('static',filename='assets/images/digital-agency/project/project3.jpg')}}" alt="Project Image">
                                             <div class="project-button">
-                                                <a href="project-details.html"><i class="far fa-plus"></i></a>
+                                                <a href="{{ url_for('project') }}"><i class="far fa-plus"></i></a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -256,7 +256,7 @@
                                                 <a href="#">Mobile App</a>
                                                 <a href="#">UI/UX Design</a>
                                             </div>
-                                            <h4 class="title"><a href="project-details.html">Financial & Wallet Website Design</a></h4>
+                                            <h4 class="title"><a href="{{ url_for('project') }}">Financial & Wallet Website Design</a></h4>
                                         </div>
                                     </div>
                                 </div>
@@ -266,7 +266,7 @@
                                         <div class="thumbnail">
                                             <img src="{{url_for('static',filename='assets/images/digital-agency/project/project4.jpg')}}" alt="Project Image">
                                             <div class="project-button">
-                                                <a href="project-details.html"><i class="far fa-plus"></i></a>
+                                                <a href="{{ url_for('project') }}"><i class="far fa-plus"></i></a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -274,7 +274,7 @@
                                                 <a href="#">Mobile App</a>
                                                 <a href="#">UI/UX Design</a>
                                             </div>
-                                            <h4 class="title"><a href="project-details.html">Sales Management Mobile App Design</a></h4>
+                                            <h4 class="title"><a href="{{ url_for('project') }}">Sales Management Mobile App Design</a></h4>
                                         </div>
                                     </div>
                                 </div>
