--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -41,7 +41,7 @@ Version: 1.0
 ----*/
 /* Base CSS */
 :root {
-  --primary-color: #9CFE4F;
+  --primary-color: #CEFF00;
   --heading-color: #1A1A1A;
   --primary-black-color: #0E0F11;
   --white-color: #ffffff;
