--- a/templates/index.html
+++ b/templates/index.html
@@ -196,7 +196,7 @@
                                 </div>
                                 <div class="col-lg-5">
                                     <div class="agk-button mb-60 float-lg-end pf_fadeup">
-                                        <a href="{{ url_for('project') }}" class="theme-btn style-one">
+                                        <a href="{{ url_for('projects') }}" class="theme-btn style-one">
                                             <span class="text-flip">
                                                 <span class="text">View All Work</span>
                                                 <span class="text">View All Work</span>
@@ -212,7 +212,7 @@
                                         <div class="thumbnail">
                                             <img src="{{url_for('static',filename='assets/images/digital-agency/project/project1.jpg')}}" alt="Project Image">
                                             <div class="project-button">
-                                                <a href="{{ url_for('project') }}"><i class="far fa-plus"></i></a>
+                                                <a href="{{ url_for('projects') }}"><i class="far fa-plus"></i></a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -220,7 +220,7 @@
                                                 <a href="#">Mobile App</a>
                                                 <a href="#">UI/UX Design</a>
                                             </div>
-                                            <h4 class="title"><a href="{{ url_for('project') }}">Medical Mobile Design & Development</a></h4>
+                                            <h4 class="title"><a href="{{ url_for('projects') }}">Medical Mobile Design & Development</a></h4>
                                         </div>
                                     </div>
                                 </div>
@@ -230,7 +230,7 @@
                                         <div class="thumbnail">
                                             <img src="{{url_for('static',filename='assets/images/digital-agency/project/project2.jpg')}}" alt="Project Image">
                                             <div class="project-button">
-                                                <a href="{{ url_for('project') }}"><i class="far fa-plus"></i></a>
+                                                <a href="{{ url_for('projects') }}"><i class="far fa-plus"></i></a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -238,7 +238,7 @@
                                                 <a href="#">Mobile App</a>
                                                 <a href="#">UI/UX Design</a>
                                             </div>
-                                            <h4 class="title"><a href="{{ url_for('project') }}">Stacks Website Design & Coding</a></h4>
+                                            <h4 class="title"><a href="{{ url_for('projects') }}">Stacks Website Design & Coding</a></h4>
                                         </div>
                                     </div>
                                 </div>
@@ -248,7 +248,7 @@
                                         <div class="thumbnail">
                                             <img src="{{url_for('static',filename='assets/images/digital-agency/project/project3.jpg')}}" alt="Project Image">
                                             <div class="project-button">
-                                                <a href="{{ url_for('project') }}"><i class="far fa-plus"></i></a>
+                                                <a href="{{ url_for('projects') }}"><i class="far fa-plus"></i></a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -256,7 +256,7 @@
                                                 <a href="#">Mobile App</a>
                                                 <a href="#">UI/UX Design</a>
                                             </div>
-                                            <h4 class="title"><a href="{{ url_for('project') }}">Financial & Wallet Website Design</a></h4>
+                                            <h4 class="title"><a href="{{ url_for('projects') }}">Financial & Wallet Website Design</a></h4>
                                         </div>
                                     </div>
                                 </div>
@@ -266,7 +266,7 @@
                                         <div class="thumbnail">
                                             <img src="{{url_for('static',filename='assets/images/digital-agency/project/project4.jpg')}}" alt="Project Image">
                                             <div class="project-button">
-                                                <a href="{{ url_for('project') }}"><i class="far fa-plus"></i></a>
+                                                <a href="{{ url_for('projects') }}"><i class="far fa-plus"></i></a>
                                             </div>
                                         </div>
                                         <div class="content">
@@ -274,7 +274,7 @@
                                                 <a href="#">Mobile App</a>
                                                 <a href="#">UI/UX Design</a>
                                             </div>
-                                            <h4 class="title"><a href="{{ url_for('project') }}">Sales Management Mobile App Design</a></h4>
+                                            <h4 class="title"><a href="{{ url_for('projects') }}">Sales Management Mobile App Design</a></h4>
                                         </div>
                                     </div>
                                 </div>
