--- a/templates/base.html
+++ b/templates/base.html
@@ -37,8 +37,8 @@
         <!--====== Preloader ======-->
         <div class="preloader">
             <div class="loading-container">
-                <div class="loading"></div>
-                <div id="loading-icon"><img src="{{url_for('static',filename='assets/images/loader.png')}}" alt=""></div>
+                <div class="rotate360"><div  id="loading-icon"><img src="{{url_for('static',filename='assets/images/pages/shape/cookieshape1.png')}}" alt=""></div></div>
+                
             </div>
         </div>
         <!--====== Start Overlay ======-->
