--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,10 +4,11 @@
 {% block title %}Contact{% endblock %}
 
 {% block head %}
-  
+  <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 {% endblock %}
 
-                {% block body %}
+ {% block body %}
 
                     <!--====== Start Contact Section  ======-->
                     <section class="agenko-contact pt-130 pb-80">
@@ -19,17 +20,17 @@
                                         <div class="shape"><span><img src="{{url_for('static',filename='assets/images/pages/shape/world.png')}}" alt="map"></span></div>
                                         <ul>
                                             <li>
-                                                <div class="phone"><a href="tel:+1(555)123-4567">+1 (555) 123-4567</a></div>
+                                                <div class="phone"><a href="tel:+91 87924 22492 ">+91 87924 22492</a></div>
                                             </li>
                                             <li>
                                                 <!--=== Agenko Info Box ===-->
                                                 <div class="agenko-info-box">
                                                     <div class="content">
                                                         <h3>Address</h3>
-                                                        <p>6801 Hollywood Blvd, Los Angeles, 
-                                                            CA 90028</p>
-                                                        <p>6801 Hollywood Blvd, Los Angeles, 
-                                                                CA 90028</p>
+                                                        <p>opposite yatheem khana, tirurangadi  kodthale ippo thalkaalam</p>
+                                                        
+                                                        
+                                                        
                                                     </div>
                                                 </div>
                                             </li>
@@ -38,8 +39,8 @@
                                                 <div class="agenko-info-box">
                                                     <div class="content">
                                                         <h3>Email</h3>
-                                                        <p><a href="mailto:Info@agenko45.com">Info@agenko45.Com</a></p>
-                                                        <p><a href="mailto:Info@agenko45.com">Info@agenko45.Com</a></p>
+                                                        <p><a href="virtualcookiein@gmail.com">virtualcookiein@gmail.com</a></p>
+                                                        
                                                     </div>
                                                 </div>
                                             </li>
@@ -49,10 +50,12 @@
                                                     <div class="content">
                                                         <h3>Follow</h3>
                                                         <div class="social-link">
-                                                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                                            <a href="#"><i class="fab fa-instagram"></i></a>
-                                                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                                            <a href="#"><i class="fab fa-twitter"></i></a>
+                                                           
+                                                            <a href="https://www.instagram.com/virtual_cookie?igsh=OGF3c2ZocWp0NWlw"><i class="bi bi-instagram"></i></a>
+                                                            <a href="https://x.com/virtual_cookie"><i class="bi bi-twitter-x"></i></a>
+                                                            <a href="mailto:virtualcookiein@gmail.com"><i class="bi bi-envelope-fill"></i></a>
+                                                            <a href="https://www.threads.com/@virtual_cookie"><i class="bi bi-at"></i></a>
+                                                            
                                                         </div>
                                                     </div>
                                                 </div>
@@ -68,7 +71,7 @@
                                             <h2>Get started and grow your business now.</h2>
                                         </div>
                                         <p class="mb-20">Start today to unlock opportunities and drive your business toward success.</p>
-                                        <form class="agenko-contact-form style-one" id="contact-form" action="contact.php" method="POST">
+                                        <form class="agenko-contact-form style-one" id="contact-form" action="{{ url_for('contact') }}" method="POST">
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="form-group">
@@ -106,7 +109,7 @@
                     <section class="agenko-map">
                         <!--=== Map Box ===-->
                         <div class="map-box" data-aos="fade-up" data-aos-duration="1300">
-                            <iframe src="https://maps.google.com/maps?q=new%20york&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31327.65639398313!2d75.90686356305045!3d11.041847172584701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba65301ddfdeac1%3A0x10681b98ecd5196d!2sTirurangadi%2C%20Kerala%20676306!5e0!3m2!1sen!2sin!4v1769593235924!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </section>
   
