--- a/templates/services.html
+++ b/templates/services.html
@@ -1,16 +1,23 @@
 
   
-               {% extends "base.html" %}
+      {% extends "base.html" %}
 
-{% block title %}Contact{% endblock %}
+{% block title %}Service{% endblock %}
 
 {% block head %}
-  
-{% endblock %}
-
+  <style>
+    .thumbnail img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+  </style>
+  {% endblock %}
                 {% block body %}
 
-                    <!--====== Start Page Banner Section  ======-->
+                  
+                   <!--====== Start Page Banner Section  ======-->
                  <!--====== End Page Banner Section  ======-->
                     <!--====== Start Agenko Team Section  ======-->
                     <section class="agenko-team pt-130 pb-85">
@@ -31,58 +38,21 @@
                             
                             <div class="row">
                                 <div class="col-lg-12">
+                                    {% for service in services %}
                                     <!--=== Agenko Card Item ===-->
                                     <div class="agenko-card-item style-two mb-10 pf_fadeup">
                                         <div class="thumbnail">
-                                            <img src="{{url_for('static',filename='assets/images/pages/service/card-img1.jpg')}}" alt="Card Image">
+                                            <img src="{{url_for('static',filename=service.image)}}" alt="{{ service.title }}">
                                         </div>
                                         <div class="card-title">
-                                            <h2>Development</h2>
-                                            <h4>Web Development</h4>
+                                            <h2>{{ service.title }}</h2>
+                                            <h4>{{ service.subtitle }}</h4>
                                         </div>
                                         <div class="content">
-                                            <p>We innovative development solutions, combining technology and creativity to build efficient and scalable, and user-friendly digital platforms.</p>
+                                            <p>{{ service.description }}</p>
                                         </div>
                                     </div>
-                                    <!--=== Agenko Card Item ===-->
-                                    <div class="agenko-card-item style-two mb-10 pf_fadeup">
-                                        <div class="thumbnail">
-                                            <img src="{{url_for('static',filename='assets/images/pages/service/card-img2.jpg')}}" alt="Card Image">
-                                        </div>
-                                        <div class="card-title">
-                                            <h2>UI/UX Design</h2>
-                                            <h4>Mobile Apps Design</h4>
-                                        </div>
-                                        <div class="content">
-                                            <p>We innovative development solutions, combining technology and creativity to build efficient and scalable, and user-friendly digital platforms.</p>
-                                        </div>
-                                    </div>
-                                    <!--=== Agenko Card Item ===-->
-                                    <div class="agenko-card-item style-two mb-10 pf_fadeup">
-                                        <div class="thumbnail">
-                                            <img src="{{url_for('static',filename='assets/images/pages/service/card-img3.jpg')}}" alt="Card Image">
-                                        </div>
-                                        <div class="card-title">
-                                            <h2>Graphics</h2>
-                                            <h4>Bradning Design </h4>
-                                        </div>
-                                        <div class="content">
-                                            <p>We innovative development solutions, combining technology and creativity to build efficient and scalable, and user-friendly digital platforms.</p>
-                                        </div>
-                                    </div>
-                                    <!--=== Agenko Card Item ===-->
-                                    <div class="agenko-card-item style-two mb-10 pf_fadeup">
-                                        <div class="thumbnail">
-                                            <img src="{{url_for('static',filename='assets/images/pages/service/card-img4.jpg')}}" alt="Card Image">
-                                        </div>
-                                        <div class="card-title">
-                                            <h2>Marketing</h2>
-                                            <h4>SEO Marketing</h4>
-                                        </div>
-                                        <div class="content">
-                                            <p>We innovative development solutions, combining technology and creativity to build efficient and scalable, and user-friendly digital platforms.</p>
-                                        </div>
-                                    </div>
+                                    {% endfor %}
                                 </div>
                             </div>
                         </div>
@@ -92,119 +62,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <!--=== Section Title ===-->
-                                    <div class="section-title text-center mb-40 pf_zoomIn">
-                                        <span class="sub-title">Our Client</span>
-                                        <h2>Trusted Industry Leader</h2>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <!--=== Company list ===-->
-                                    <div class="company-list d-flex flex-wrap justify-content-center ">
-                                        <!--=== Agenko Client Item ===-->
-                                        <div class="agenko-client-item style-two mb-40 pf_fadeup">
-                                            <div class="client-image">
-                                                <img src="{{url_for('static',filename='assets/images/pages/client/.jpg')}}" alt="Client Image">
-                                            </div>
-                                        </div>
-                                        <!--=== Agenko Client Item ===-->
-                                        <div class="agenko-client-item style-two mb-40 pf_fadeup">
-                                            <div class="client-image">
-                                                <img src="{{url_for('static',filename='assets/images/pages/client/client2.png')}}" alt="Client Image">
-                                            </div>
-                                        </div>
-                                        <!--=== Agenko Client Item ===-->
-                                        <div class="agenko-client-item style-two mb-40 pf_fadeup">
-                                            <div class="client-image">
-                                                <img src="{{url_for('static',filename='assets/images/pages/client/client3.png')}}" alt="Client Image">
-                                            </div>
-                                        </div>
-                                        <!--=== Agenko Client Item ===-->
-                                        <div class="agenko-client-item style-two mb-40 pf_fadeup">
-                                            <div class="client-image">
-                                                <img src="{{url_for('static',filename='assets/images/pages/client/client4.png')}}" alt="Client Image">
-                                            </div>
-                                        </div>
-                                        <!--=== Agenko Client Item ===-->
-                                        <div class="agenko-client-item style-two mb-40 pf_fadeup">
-                                            <div class="client-image">
-                                                <img src="{{url_for('static',filename='assets/images/pages/client/client5.png')}}" alt="Client Image">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section><!--======  End Company Section  ======-->
-                    <!--=== Start Blog Section ===-->
-                    <section class="agenko-blog pb-80">
-                        <div class="container">
-                            <div class="row align-items-center">
-                                <div class="col-lg-6">
-                                    <!--=== Section Title ===-->
-                                    <div class="section-title mb-50 pf_fadeup">
-                                        <span class="sub-title">Latest Blogs </span>
-                                        <h2>Expert Insights and News
-                                            Stay Ahead with Us</h2>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <!--=== Agk Button ===-->
-                                    <div class="text-box mb-40 pf_fadeup">
-                                        <p>Explore expert insights, industry trends, and the latest digital news to keep your business informed and ahead of the competition</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <!--=== Agk Blog Post ===-->
-                                    <div class="agenko-blog-item style-three mb-40 pf_fadeup">
-                                        <div class="post-thumbnail">
-                                            <img src="{{url_for('static',filename='assets/images/marketing-agency/blog/blog1.jpg')}}" alt="Blog Image">
-                                        </div>
-                                        <div class="post-content-wrap">
-                                            <div class="post-content">
-                                                <div class="post-meta">
-                                                    <span><a href="#">Web Design</a></span>
-                                                    <span><a href="#">02 Oct, 2025</a></span>
-                                                </div>
-                                                <h4 class="title"><a href="blog-details.html">Creative Javanese a Lead Designer & Mobile 
-                                                    UI/UX Core Checklist</a></h4>
-                                            </div>
-                                            <div class="post-button">
-                                                <a href="blog-details.html" class="icon-btn style-one"><i class="far fa-arrow-right"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <!--=== Agk Blog Post ===-->
-                                    <div class="agenko-blog-item style-three mb-40 pf_fadeup">
-                                        <div class="post-thumbnail">
-                                            <img src="{{url_for('static',filename='assets/images/marketing-agency/blog/blog2.jpg')}}" alt="Blog Image">
-                                        </div>
-                                        <div class="post-content-wrap">
-                                            <div class="post-content">
-                                                <div class="post-meta">
-                                                    <span><a href="#">Web Design</a></span>
-                                                    <span><a href="#">02 Oct, 2025</a></span>
-                                                </div>
-                                                <h4 class="title"><a href="blog-details.html">Defensive Guide to Make a Daily More Creative 
-                                                    Website Productive Working Flow</a></h4>
-                                            </div>
-                                            <div class="post-button">
-                                                <a href="blog-details.html" class="icon-btn style-one"><i class="far fa-arrow-right"></i></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </section><!--=== End Blog Section ===-->
-               
-                    
+                                  
                     {% block scripts %}
                     {% endblock %}
     
